fix date and time alignment on medium screens

--- a/client/assets/pages/_event_details-page.scss
+++ b/client/assets/pages/_event_details-page.scss
@@ -1,3 +1,4 @@
+@import '../tools/functions.scss';
 .event-details{
   position: absolute;
   left: 2.5vw;
@@ -15,7 +16,7 @@
     float: left;
     padding: rem(19px) rem(19px) rem(12px) rem(19px);
     background-color: #FFF;
-    @media screen and (max-width: rem(480px)) {
+    @media screen and (max-width: rem(840px)) {
       width: 100%;
     }
   }
